--- a/index.html
+++ b/index.html
@@ -214,8 +214,11 @@
                         </header>
                         <main>
                             <div class="tit-wrap">
-                                <h2 class="h2-tit">※ 개인정보 수집 이용 동의</h2>
+                                <h2 class="h2-tit">※ 개인정보 수집·이용 동의</h2>
                             </div>
+                            <ul class="bullet-list">
+                                <li class="b-txt"> LG전자 주식회사(이하 “당사”)는 <span class="red">LG전자 앰버서더 3기 모집 이벤트</span>에 참여하는 귀하의 개인정보를 아래와 같이 수집·이용합니다.</li>
+                            </ul>
                             <div class="tb_row tb-bor">
                                 <table>
                                     <caption>개인정보 수집 이용 동의 목적, 항목, 보유기간 안내</caption>
@@ -227,32 +230,94 @@
                                     <thead>
                                         <tr>
                                             <th scope="col">수집항목</th>
-                                            <th scope="col">수집*이용목적</th>
-                                            <th scope="col">보유*이용기간</th>
+                                            <th scope="col">수집 목적</th>
+                                            <th scope="col">보유 기간</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>이름, 휴대폰번호, 생년월일, 이메일주소, SNS 계정 URL, 이벤트 참여용 사진, SNS 채널 정보</td>
+                                            <td>이름, 휴대폰번호, 생년월일, 이메일주소, SNS계정 URL, 이벤트 참여용 사진, SNS 채널정보</td>
                                             <td>참여자 본인 확인, 이벤트 참여조건 확인, 앰버서더 선정 및 경품 지급</td>
-                                            <td><span class="underline">이벤트 종료일로부터<br />3개월까지 보유 후 파기</span></td>
+                                            <td>
+                                                <span class="underline">LG전자 앰버서더 3기 모집 이벤트 종료일로부터3개월까지 보유 후 파기</span>
+                                                <span class="underline">(단, 당사가 제공하는 다른 서비스의 이용과정에서 해당 서비스의 개인정보 수집·이용에 동의를 하신 경우, 당사는 귀하가 동의하신 기간 동안 귀하의 개인정보를 보유할 수 있습니다.)</span>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="noti-txt">※ 19세 미만 고객의 경우, LG전자 앰버서더 3기 모집 이벤트 참여가 제한됩니다.</div>
+                            <ul class="bullet-list">
+                                <li class="b-txt">귀하께서는 본 동의를 거절하실 수 있습니다. <br>
+                                     단, 거절하신 경우 <span class="red">LG전자 앰버서더 3기 모집 이벤트</span> 참여 및 응모가 제한될 수 있습니다. 
+                                </li>
+                                <li class="b-txt">위와 같이 개인정보를 수집·이용 함에 동의하십니까?</li>
+                            </ul>
+
+                            <div class="agree-input">
+                                <span class="rdo-wrap">
+                                    <input type="radio" id="chk1-1" name="agreechk-1">
+                                    <label for="chk1-1">동의합니다</label>
+                                </span>
+                                <span class="rdo-wrap">
+                                    <input type="radio" id="chk1-2" name="agreechk-1">
+                                    <label for="chk1-2">동의하지 않습니다</label>
+                                </span>
+                            </div>
+
+                            <!-- 개인정보 -->
+                            <div class="tit-wrap">
+                                <h2 class="h2-tit">※ 개인정보 제3자 제공 동의서</h2>
+                            </div>
+                            <ul class="bullet-list">
+                                <li class="b-txt">LG전자 주식회사(이하 “당사”)는 <span class="red">LG전자 앰버서더 3기 모집 이벤트</span>에 
+                                    참여하는 귀하의 개인정보를 아래와 같이 제3자에게 제공하고자 합니다.
+                                    귀하께서는 “이벤트 개인정보처리방침”에서 보다 상세한 내용을 
+                                    확인하실 수 있습니다.
+                                </li>
+                            </ul>
+                            <div class="tb_row2 tb-bor">
+                                <table>
+                                    <colgroup>
+                                        <col width="35%">
+                                        <col width="">
+                                    </colgroup>
+                                    <tbody>
+                                        <tr>
+                                            <th><strong>제공받는 자</strong></th>
+                                            <td><strong>HSAD, ㈜프리비알</strong></td>
+                                        </tr>
+                                        <tr>
+                                            <th>제공 목적</th>
+                                            <td>LG전자 앰버서더 3기 모집 및 <br class="br">이벤트 당첨자 선정을 위한 개인정보 수집</td>
+                                        </tr>
+                                        <tr>
+                                            <th>제공 항목</th>
+                                            <td>이름, 휴대폰 번호, 생년월일, 이메일 주소, SNS 계정 URL,이벤트 참여용 사진, SNS 채널 정보</td>
+                                        </tr>
+                                        <tr>
+                                            <th>보유 기간</th>
+                                            <td>수집일로부터 3개월까지</td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
                             <ul class="bullet-list">
-                                <li class="b-txt">귀하께서는 본 동의를 거절하실 수 있습니다. 단, 거절하신 경우 이벤트 참여가 제한될 수 있습니다.</li>
-                                <li class="b-txt">만 19세 미만 고객의 경우, 이벤트 참여가 제한됩니다.</li>
+                                <li class="b-txt">귀하께서는 개인정보를 제공하는 동의를 거부할 권리가 있습니다.
+                                    단, 동의를 거부할 경우, <span class="red">LG전자 앰버서더 3기 모집 이벤트</span> 참여 및 응모가
+                                    제한될 수 있습니다.
+                                </li>
+                                <li class="b-txt">위와 같이 개인정보를 제공하는데 동의하십니까?</li>
                             </ul>
 
                             <div class="agree-input">
                                 <span class="rdo-wrap">
-                                    <input type="radio" id="chk1-1" name="agreechk-1" value="1">
-                                    <label for="chk1-1">동의합니다</label>
+                                    <input type="radio" id="chk2-1" name="agreechk-2">
+                                    <label for="chk2-1">동의합니다</label>
                                 </span>
                                 <span class="rdo-wrap">
-                                    <input type="radio" id="chk1-2" name="agreechk-1" value="2">
-                                    <label for="chk1-2">동의하지 않습니다</label>
+                                    <input type="radio" id="chk2-2" name="agreechk-2">
+                                    <label for="chk2-2">동의하지 않습니다</label>
                                 </span>
                             </div>
 
