--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
         })();
     </script>
-    <link rel="stylesheet" type="text/css" href="./pc/css/common.css?2025032602">
+    <link rel="stylesheet" type="text/css" href="./pc/css/common.css">
 
 	<div class="wrap _pc">
 		<div class="view_wrap">
@@ -1865,4 +1865,4 @@
 
 </body>
 </html>
-<!--    2025082812  -->
+<!--    2025090301  -->
