--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
 
                             <div class="agree-input">
                                 <span class="rdo-wrap">
-                                    <input type="radio" id="chk2-1" name="agreechk-2">
+                                    <input type="radio" id="chk2-1" name="agreechk-22">
                                     <label for="chk2-1">동의합니다</label>
                                 </span>
                                 <span class="rdo-wrap">
-                                    <input type="radio" id="chk2-2" name="agreechk-2">
+                                    <input type="radio" id="chk2-2" name="agreechk-22">
                                     <label for="chk2-2">동의하지 않습니다</label>
                                 </span>
                             </div>
@@ -1494,6 +1494,11 @@
                         if( !$("#chk1-1").is(":checked") ) {
                             jsErrorMessagePrint("개인정보 수집 이용을 동의해 주세요.");
                             //  $("#chk1-1").focus();
+                            return;
+                        }
+                        if( !$("#chk2-1").is(":checked") ) {
+                            jsErrorMessagePrint("개인정보 제3자 제공 동의서에 동의해 주세요.");
+                            //  $("#chk2-1").focus();
                             return;
                         }
                         if( !$("#chk2").is(":checked") ) {
