--- a/index2025090501.html
+++ b/index2025090501.html
@@ -2592,8 +2592,8 @@
 <style>
 .sky-banner {
   position: fixed;
-  right: max(10px, env(safe-area-inset-right));
-  bottom: max(35px, env(safe-area-inset-bottom));
+  right: max(30px, env(safe-area-inset-right));
+  bottom: max(25px, env(safe-area-inset-bottom));
   z-index: 1;
 }
 .sky-banner .inner {
@@ -2655,11 +2655,11 @@
   }
 }
 
-@media (prefers-reduced-motion: reduce) {
+/* @media (prefers-reduced-motion: reduce) {
   html:focus-within {
     scroll-behavior: auto;
   }
-}
+} */
 </style>
 <!-- 콘텐츠 상세페이지 공유하기 팝업 레이어 -->
 <article class="layer layer-share">
