--- a/index2025090501.html
+++ b/index2025090501.html
@@ -2628,8 +2628,8 @@
 @media (min-width: 1024px) {
   .sky-banner .btn-top,
   .sky-banner .btn-bottom {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     margin-top: 10px;
   }
 }
@@ -2650,8 +2650,9 @@
 }
 @media (min-width: 1024px) {
   .sky-banner {
-    bottom: clamp(110px, 25.5813953488vw, 220px);
-    right: max(15px, (100vw - 1200px) / 2 + 10px);
+    bottom: clamp(110px, 25.5813953488vw, 160px);
+    /* right: max(30px, (100vw - 1200px) / 2 + 10px); */
+    right:48px;
   }
 }
 
