--- a/index2025090501.html
+++ b/index2025090501.html
@@ -3062,9 +3062,9 @@
     <div class="img"><img src="https://jammy.lge.co.kr/assets/common/img/icon/loading.gif" alt="로딩"/></div>
 </div>
 
-<section class="sky-banner" aria-label="빠른 이동">
+<section class="sky-banner" aria-label="LG전자 앰버서더 지원하기">
     <div class="inner">
-        <a href="#page-top" class="btn-top" role="button" aria-label="위로 가기" aria-disabled="false"><span class="blind">위로가기</span></a>
+        <button class="btn-top" role="button" aria-label="위로 가기" aria-disabled="false" onClick="gtag('event', 'LG전자 엠버서더 3기', {'event_category': '클릭', 'event_label': 'LG전자 엠버서더 지원하기'});initForm();"><span class="blind">위로가기</span></button>
     </div>
 </section>
 </body>
