--- a/index2025090501.html
+++ b/index2025090501.html
@@ -3064,7 +3064,7 @@
 
 <section class="sky-banner" aria-label="LG전자 앰버서더 지원하기">
     <div class="inner">
-        <button class="btn-top" role="button" aria-label="위로 가기" aria-disabled="false" onClick="gtag('event', 'LG전자 엠버서더 3기', {'event_category': '클릭', 'event_label': 'LG전자 엠버서더 지원하기'});initForm();"><span class="blind">위로가기</span></button>
+        <button class="btn-top" role="button" aria-label="LG전자 앰버서더 지원하기" aria-disabled="false" onClick="gtag('event', 'LG전자 엠버서더 3기', {'event_category': '클릭', 'event_label': 'LG전자 엠버서더 지원하기'});initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></button>
     </div>
 </section>
 </body>
