--- a/index2025090902.html
+++ b/index2025090902.html
@@ -33,7 +33,6 @@
             html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, form, fieldset, legend, address, figure, hr, object, iframe, img, button, input, select, textarea, label, a, span, em, strong, small, sub, sup, table, caption, thead, tbody, tfoot, tr, th, td {padding:0; margin:0; outline:0;}
             #wrap {width:100%; margin:0 auto; max-width: 960px;}
             .section img{width:100%; margin:0 auto;}
-
         </style>
 	</head>
 	<body>
@@ -42,7 +41,7 @@
         <div id="wrap">
             <!-- main -->
             <div class="section main">
-                <img src="./pc/images/bg_pc.png?2025030404" class="pc">
+                <img src="./pc/images/2025090902.jpg" class="pc">
             </div>
             <!-- main -->
         </div>		
