--- a/index2025090902.html
+++ b/index2025090902.html
@@ -31,7 +31,7 @@
 		
 		<style>
             html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, form, fieldset, legend, address, figure, hr, object, iframe, img, button, input, select, textarea, label, a, span, em, strong, small, sub, sup, table, caption, thead, tbody, tfoot, tr, th, td {padding:0; margin:0; outline:0;}
-            #wrap {width:100%; margin:0 auto; max-width: 960px;}
+            #wrap {width:100%; margin:0 auto; max-width: 100%;}
             .section img{width:100%; margin:0 auto;}
         </style>
 	</head>
