--- a/index2025091001.html
+++ b/index2025091001.html
@@ -48,7 +48,7 @@
                              <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual.mp4" type="video/mp4">
                             </video>
-                            <video id="main-video-mo" autoplay loop muted playsinline preload="auto">
+                            <video id="main-video-mo" poster="./mo/images/poster.jpg" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual_m.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -127,7 +127,7 @@
                             <img src="mo/images/sec_04_1.png" alt="">
                         </picture>
                     </div>
-                    <button class="button-apply" onClick="modal('dialog')"><span class="blind">LG전자 앰버서더 지원하기</span></button>
+                    <button class="button-apply" onClick="initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></button>
 				</div>
 
 				<div class="section sec_6 _fixed_content" id="sec6">
@@ -161,7 +161,7 @@
                     </div>
 
                     <div class="btn-wraps">
-                        <a class="button-report" onClick=""><span class="blind">찐팬 제보하기</span></a>
+                        <a class="button-report" href="https://forms.gle/pNH18iDQZxvnjNW49" target="_blank"><span class="blind">찐팬 제보하기</span></a>
                         <a class="button-share" onClick="modal('dialog3')"><span class="blind">내 주변 찐팬에게 공유하기</span></a>
                     </div>
 				</div>
@@ -173,7 +173,7 @@
                             <img src="mo/images/sec_07_1.png" alt="">
                         </picture>
                     </div>
-                    <a class="button-apply" onclick="modal('dialog')"><span class="blind">LG전자 앰버서더 지원하기</span></a>
+                    <a class="button-apply" onclick="initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></a>
 				</div>
 
                 <div class="section sec_9" id="sec9">
@@ -1178,6 +1178,12 @@
         </div>
     </div>
 
+
+    <section class="sky-banner" aria-label="LG전자 앰버서더 지원하기">
+        <div class="inner">
+            <button class="btn-top" role="button" aria-label="LG전자 앰버서더 지원하기" aria-disabled="false" onClick="gtag('event', 'LG전자 엠버서더 3기', {'event_category': '클릭', 'event_label': 'LG전자 엠버서더 지원하기'});initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></button>
+        </div>
+    </section>
 
     <script type="text/javascript">
         // 메인 비디오
