--- a/index2025091001.html
+++ b/index2025091001.html
@@ -162,7 +162,7 @@
 
                     <div class="btn-wraps">
                         <a class="button-report" href="https://forms.gle/pNH18iDQZxvnjNW49" target="_blank"><span class="blind">찐팬 제보하기</span></a>
-                        <a class="button-share" onClick="modal('dialog3')"><span class="blind">내 주변 찐팬에게 공유하기</span></a>
+                        <a class="button-share" href="#" onClick="modal('dialog3')"><span class="blind">내 주변 찐팬에게 공유하기</span></a>
                     </div>
 				</div>
 
@@ -173,7 +173,7 @@
                             <img src="mo/images/sec_07_1.png" alt="">
                         </picture>
                     </div>
-                    <a class="button-apply" onclick="initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></a>
+                    <a class="button-apply" href="#" onclick="initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></a>
 				</div>
 
                 <div class="section sec_9" id="sec9">
