--- a/index2025091001.html
+++ b/index2025091001.html
@@ -1241,7 +1241,7 @@
 
                 if (cleanTarget === "#sec6") {
                     if (window.innerWidth > 768) { // PC일 때만 적용
-                        extraOffset = -15;
+                        // extraOffset = 5;
                     }
                 }
 
