--- a/index2025090501.html
+++ b/index2025090501.html
@@ -572,9 +572,9 @@
             <div class="section sec_3 _fixed_content" id="sec3">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_02.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_02_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_02.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_02_1.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -582,9 +582,9 @@
             <div class="section sec_4" id="sec4">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_03.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_03_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_03.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_03_1.png" alt="">
                     </picture>
                 </div>
 
@@ -593,9 +593,9 @@
             <div class="section sec_5" id="sec5">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_04.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_04_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_04.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_04_1.png" alt="">
                     </picture>
                 </div>
                 <button class="button-apply"
@@ -607,9 +607,9 @@
             <div class="section sec_6 _fixed_content" id="sec6">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_05.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_05_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_05.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_05_1.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -617,9 +617,9 @@
             <div class="section sec_7 _fixed_content" id="sec7">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_06.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_06_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_06.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_06_1.png" alt="">
                     </picture>
                 </div>
                 <!-- 비디오 -->
@@ -627,12 +627,12 @@
                     <div class="video-cont">
                         <!-- PC용 비디오 -->
                         <video id="fan-video-pc" autoplay loop muted playsinline preload="auto">
-                            <source src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/video/fan_zzin_p.mp4"
+                            <source src="./assets/common/img/event/ambassador_3rd/video/fan_zzin_p.mp4"
                                     type="video/mp4">
                         </video>
                         <!-- 모바일용 비디오 -->
                         <video id="fan-video-mo" autoplay loop muted playsinline preload="auto">
-                            <source src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/video/fan_zzin_m.mp4"
+                            <source src="./assets/common/img/event/ambassador_3rd/video/fan_zzin_m.mp4"
                                     type="video/mp4">
                         </video>
                     </div>
@@ -652,9 +652,9 @@
             <div class="section sec_8" id="sec8">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_07.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_07_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_07.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_07_1.png" alt="">
                     </picture>
                 </div>
                 <button class="button-apply"
@@ -666,9 +666,9 @@
             <div class="section sec_9" id="sec9">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_08.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_08_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_08.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_08_1.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -676,9 +676,9 @@
             <div class="section sec_10" id="sec10">
                 <div class="layout">
                     <picture class="img">
-                        <source srcset="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/pc/sec_09.png"
+                        <source srcset="./assets/common/img/event/ambassador_3rd/pc/sec_09_1.png"
                                 media="(min-width: 769px)">
-                        <img src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/sec_09.png" alt="">
+                        <img src="./assets/common/img/event/ambassador_3rd/mo/sec_09_1.png" alt="">
                     </picture>
                 </div>
             </div>
@@ -1898,7 +1898,7 @@
 
       if (cleanTarget === "#sec6") {
         if (window.innerWidth > 768) { // PC일 때만 적용
-          extraOffset = -25;
+        //   extraOffset = -25;
         }
       }
 
