--- a/index2025090501.html
+++ b/index2025090501.html
@@ -498,13 +498,13 @@
                 <div id="ambassdor-ani" class="ambassdor-ani">
                     <div class="video-container">
                         <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
-                            <source src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/video/main_visual.mp4?2025082813"
+                            <source src="./assets/common/img/event/ambassador_3rd/video/main_visual.mp4?2025091001"
                                     type="video/mp4">
                         </video>
                         <video id="main-video-mo" poster="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/mo/poster.jpg"
                                autoplay loop muted playsinline
                                preload="auto">
-                            <source src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/video/main_visual_m.mp4?2025082813"
+                            <source src="./assets/common/img/event/ambassador_3rd/video/main_visual_m.mp4?2025091001"
                                     type="video/mp4">
                         </video>
                     </div>
