--- a/index2025090501.html
+++ b/index2025090501.html
@@ -627,12 +627,12 @@
                     <div class="video-cont">
                         <!-- PC용 비디오 -->
                         <video id="fan-video-pc" autoplay loop muted playsinline preload="auto">
-                            <source src="./assets/common/img/event/ambassador_3rd/video/fan_zzin_p.mp4"
+                            <source src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/video/fan_zzin_p.mp4"
                                     type="video/mp4">
                         </video>
                         <!-- 모바일용 비디오 -->
                         <video id="fan-video-mo" autoplay loop muted playsinline preload="auto">
-                            <source src="./assets/common/img/event/ambassador_3rd/video/fan_zzin_m.mp4"
+                            <source src="https://jammy.lge.co.kr/assets/common/img/event/ambassador_3rd/video/fan_zzin_m.mp4"
                                     type="video/mp4">
                         </video>
                     </div>
