--- a/index2025090501.html
+++ b/index2025090501.html
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href="https://jammy.lge.co.kr/assets/common/css/datatable.css"/>
     <link rel="stylesheet" href="https://jammy.lge.co.kr/assets/common/css/jquery.toast.css"/>
     <link rel="stylesheet" href="https://jammy.lge.co.kr/assets/common/css/swiper.min.css">
-    <link rel="stylesheet" href="https://jammy.lge.co.kr/assets/common/css/common.css?2024032001">
+    <!-- <link rel="stylesheet" href="https://jammy.lge.co.kr/assets/common/css/common.css?2024032001"> -->
     <link rel="stylesheet" href="https://jammy.lge.co.kr/assets/common/css/reset.css?2024032001">
 
     <style>
@@ -2991,8 +2991,6 @@
 </body>
 </html>
 
-
-<link rel="stylesheet" href="./pc/css/common.css">
 <section class="sky-banner" aria-label="LG전자 앰버서더 지원하기">
     <div class="inner">
         <button class="btn-top" role="button" aria-label="LG전자 앰버서더 지원하기" aria-disabled="false" onClick="gtag('event', 'LG전자 엠버서더 3기', {'event_category': '클릭', 'event_label': 'LG전자 엠버서더 지원하기'});initForm();"><span class="blind">LG전자 앰버서더 지원하기</span></button>
